# vanilla_steel

./: README.md  pyproject.toml  requirements.txt
__MACOSX/: ._README_MD.md
__MACOSX/resources/: ._source1.xlsx
output/: joined.csv  metadata.csv  order_info.csv
resources/: ~$source2.xlsx
vanilla_steel/: eda.py  parse.py  utils.py
