[tool.poetry]
name = "vanilla-steel"
version = "0.1.0"
description = "Code for case-study interview for vanilla steel."
authors = ["Liam Tharp <liamtharp@gmail.com>"]
readme = "README.md"
packages = [{include = "vanilla-steel"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
spacy = "^3.7"
dbt = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
