[tool.poetry]
name = "vanilla-steel"
version = "0.1.0"
description = "Code for case-study interview for vanilla steel."
authors = ["Liam Tharp <liamtharp@gmail.com>"]
readme = "README.md"
packages = [{include = "vanilla_steel"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
spacy = "^3.7"
dbt = "^1.0"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
